Major update for Activities
Activites now have their form allowing admins to create new ones. Activites are now retrived from the db.

--- a/src/app/activity/activity.component.css
+++ b/src/app/activity/activity.component.css
@@ -39,3 +39,16 @@ h4:hover{
   bottom: 40%;
   left: -2.5px;
 }
+.activityText{
+  text-indent: 1em;
+}
+
+.popupContainer{
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.locationDiv{
+  font-style: italic;
+  color: #003c6f;
+}
