--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,8 @@
     <!-- Admin form -->
 
     <div class=popupContainer  *ngIf="token">
-      <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">add article</button>
+      <button type="button" class="btn btn-info btn-lg buttonForm" (click)="showFormPopup()">add article</button>
+
       <app-popup *ngIf="displayFormPopup" class=popup [popupTitle]="'Add new Article'" [popupWidth]="5" (onClose)="formPopupOnClose()">
         <div>
           <app-article-form [pageId]="curId" (newArticleEvent)="newArticle($event)" ></app-article-form>
