--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,12 +43,12 @@
                     <span class="caret"></span>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a href="#">-></a></li>
+                    <!-- <li><a href="#">-></a></li>
                     <li><a href="#"><-</a></li>
-                    <li role="separator" class="divider"></li>
+                    <li role="separator" class="divider"></li> -->
                     <li><a (click)="deletePage(i)">Delete</a></li>
-                    <li><a >Edit</a></li>
-                    <li role="separator" class="divider"></li>
+                    <!-- <li><a >Edit</a></li>
+                    <li role="separator" class="divider"></li> -->
                     <li><a routerLink="{{ page.position!==0 ? pageTypes[page.type]+'/'+page._id : '' }}">Go to</a></li>
                   </ul>
                 </div><!-- /btn-group -->
