move pages admin panel to /admin

--- a/src/app/article-form/article-form.component.html
+++ b/src/app/article-form/article-form.component.html
@@ -10,8 +10,7 @@
   <div class="row">
     <div class="form-group col-xs-4">
       <select class="custom-select" id="mimetype" [(ngModel)]="newArticle.mimetype" name="mimetype">
-        <option selected>Open this select menu</option>
-        <option value="">Select media</option>
+        <option selected value="">Select media</option>
         <option value="image">image</option>
         <option value="youtube">youtube</option>
       </select>
