less lorem ipsum on footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="col-sm-4 hidden-sm-down">
       <div class="card-block">
-        <h3 class="card-header">Lorem ipsum</h3>
+        <h3 class="card-header">Des infos</h3>
       </div>
       <ul class="list-group list-group-flush">
         <li>Lorem ipsum dolor sit amet.</li>
@@ -13,24 +13,22 @@
     </div>
     <div class="col-sm-6 col-md-4 hidden-xs-down">
       <div class="card-block">
-        <h3 class="card-header">Lorem ipsum</h3>
+        <h3 class="card-header">Partenaires</h3>
       </div>
       <ul class="list-group list-group-flush">
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Ford Perfect</li>
+        <li>Marvin</li>
       </ul>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-4">
       <div class="card-block">
-        <h3 class="card-header">Lorem ipsum</h3>
+        <h3 class="card-header">Contact</h3>
       </div>
       <ul class="list-group list-group-flush">
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Stavro Mueller Beta</li>
+        <li>London</li>
+        <li>01 42 03 0425</li>
+        <li>superadresse@gmail.com</li>
       </ul>
     </div>
   </div>
