--- a/src/app/article-form/article-form.component.html
+++ b/src/app/article-form/article-form.component.html
@@ -1,36 +1,36 @@
-<form (ngSubmit)="submitArticle()" class="row card" id='newArticle'>
+<form (ngSubmit)="article.newArticle ?  submitArticle() : editArticle()" class="row card" id='article'>
   <div class="form-group">
-    <input type="text" class="form-control" id="title" [(ngModel)]="newArticle.title" name="title">
+    <input type="text" class="form-control" id="title" [(ngModel)]="article.title" name="title">
   </div>
 
   <div class="form-group">
-    <textarea class="form-control" id="text" rows="3" [(ngModel)]="newArticle.text" name="text"></textarea>
+    <textarea class="form-control" id="text" rows="3" [(ngModel)]="article.text" name="text"></textarea>
   </div>
 
   <div class="row">
     <div class="form-group col-xs-4">
-      <select class="custom-select" id="mimetype" [(ngModel)]="newArticle.mimetype" name="mimetype">
+      <select class="custom-select" id="mimetype" [(ngModel)]="article.mimetype" name="mimetype">
         <option selected value="">Select media</option>
         <option value="image">image</option>
         <option value="youtube">youtube</option>
       </select>
     </div>
 
-    <div class="form-group col-xs-5" *ngIf="newArticle.mimetype === 'image' && !newArticle.media">
+    <div class="form-group col-xs-5" *ngIf="article.mimetype === 'image' && !article.media">
       <label class="custom-file">
         <input type="file" id="file" class="custom-file-input" (change)="fileChange(input)" #input>
         <span class="custom-file-control">Click here to choose image</span>
       </label>
     </div>
 
-    <div class="form-group col-xs-5" *ngIf="newArticle.media && newArticle.mimetype === 'image'">
-      <img [attr.src]='newArticle.media' (click)="removeFile(i)" class="img-thumbnail rounded mx-auto d-block" alt=""/>
+    <div class="form-group col-xs-5" *ngIf="article.media && article.mimetype === 'image'">
+      <img [attr.src]='article.media' (click)="removeFile(i)" class="img-thumbnail rounded mx-auto d-block" alt=""/>
     </div>
 
-    <div class="form-group col-xs-5" *ngIf="newArticle.mimetype === 'youtube'">
-      <input type="text" class="form-control" id="youtube" [(ngModel)]="newArticle.media" name="media">
+    <div class="form-group col-xs-5" *ngIf="article.mimetype === 'youtube'">
+      <input type="text" class="form-control" id="youtube" [(ngModel)]="article.media" name="media">
     </div>
 
-    <button type="submit" class="btn btn-primary col-xs-2 mr-1 float-xs-right">Submit</button>
+    <button type="submit" class="btn btn-primary col-xs-2 mr-1 float-xs-right">{{article.newArticle ? 'Submit' : 'Edit'}}</button>
   </div>
 </form>
