--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,15 +8,15 @@
 
       <app-popup *ngIf="displayFormPopup" class=popup [popupTitle]="'Add new Article'" [popupWidth]="5" (onClose)="formPopupOnClose()">
         <div>
-          <app-article-form [pageId]="curId" (newArticleEvent)="newArticle($event)" ></app-article-form>
+          <app-article-form [pageId]="curId" (newArticleEvent)="newArticle($event)"></app-article-form>
         </div>
       </app-popup>
     </div>
 
     <!-- Articles -->
     <article *ngFor="let article of articles; let i = index; let e = even" class="row card" [ngClass]="{'articleEven': e, 'articleOdd': !e}" id='{{i}}home'>
-      <app-article-form *ngIf="article.editing" [pageId]="curId" [article]="article" (newArticleEvent)="article.editing = !article.editing"></app-article-form>
-      <div *ngIf="!article.editing" (click)="article.editing = !article.editing">
+      <app-article-form *ngIf="article.editing" [pageId]="curId" [article]="article" (newArticleEvent)="article.editing = !article.editing" (deletedArticleEvent)="deleteArticle($event)"></app-article-form>
+      <div *ngIf="!article.editing" (click)="article.editing = token ? !article.editing : false">
         <h2>{{article.title}}</h2>
         <div>
           <div *ngIf="article.mimetype && article.mimetype !== 'youtube'">
