--- a/src/app/article-form/article-form.component.html
+++ b/src/app/article-form/article-form.component.html
@@ -16,14 +16,14 @@
       </select>
     </div>
 
-    <div class="form-group col-xs-5" *ngIf="article.mimetype === 'image' && !article.media">
+    <div class="form-group col-xs-5" *ngIf="article.mimetype === 'image' && (!article.media || !article.newArticle)">
       <label class="custom-file">
         <input type="file" id="file" class="custom-file-input" (change)="fileChange(input)" #input>
         <span class="custom-file-control">Click here to choose image</span>
       </label>
     </div>
 
-    <div class="form-group col-xs-5" *ngIf="article.media && article.mimetype === 'image'">
+    <div class="form-group col-xs-5" *ngIf="article.media && article.mimetype === 'image' && article.newArticle">
       <img [attr.src]='article.media' (click)="removeFile(i)" class="img-thumbnail rounded mx-auto d-block" alt=""/>
     </div>
 
