--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,19 @@
 <div class="row">
   <h1>Home</h1>
+  <!-- Admin form -->
+  <div class=popupContainer  *ngIf="token">
+    <button type="button" class="btn btn-info btn-lg buttonForm" (click)="showFormPopup()">add article</button>
+
+    <app-popup *ngIf="displayFormPopup" class=popup [popupTitle]="'Add new Article'" [popupWidth]="5" (onClose)="formPopupOnClose()">
+      <div>
+        <app-article-form [pageId]="curId" (newArticleEvent)="newArticle($event)"></app-article-form>
+      </div>
+    </app-popup>
+  </div>
   <div class="col-sm-12 col-md-9">
-    <!-- Admin form -->
-
-    <div class=popupContainer  *ngIf="token">
-      <button type="button" class="btn btn-info btn-lg buttonForm" (click)="showFormPopup()">add article</button>
-
-      <app-popup *ngIf="displayFormPopup" class=popup [popupTitle]="'Add new Article'" [popupWidth]="5" (onClose)="formPopupOnClose()">
-        <div>
-          <app-article-form [pageId]="curId" (newArticleEvent)="newArticle($event)"></app-article-form>
-        </div>
-      </app-popup>
-    </div>
-
     <!-- Articles -->
     <article *ngFor="let article of articles; let i = index; let e = even" class="row card" [ngClass]="{'articleEven': e, 'articleOdd': !e}" id='{{i}}home'>
-      <app-article-form *ngIf="article.editing" [pageId]="curId" [article]="article" (newArticleEvent)="article.editing = !article.editing" (deletedArticleEvent)="deleteArticle($event)"></app-article-form>
+      <app-article-form *ngIf="article.editing" [pageId]="curId" [article]="article" (newArticleEvent)="editArticle($event, article)" (deletedArticleEvent)="deleteArticle($event)"></app-article-form>
       <div *ngIf="!article.editing" (click)="article.editing = token ? !article.editing : false">
         <h2>{{article.title}}</h2>
         <div>
