--- a/src/app/form-list/form-list.component.html
+++ b/src/app/form-list/form-list.component.html
@@ -3,8 +3,8 @@
   <hr/>
   <div class="form-list col-xs-2">
     <ul>
-      <li *ngFor="let item of items" (click)="selectItem(item)">{{item.name}}</li>
-      <li (click)="selectItem(newItem)">New item</li>
+      <li *ngFor="let item of items" (click)="selectItem(item)" [ngClass]="{'active': item === curItem}">{{item.name}}</li>
+      <li (click)="selectItem(newItem)" [ngClass]="{'active': newItem === curItem}">New item</li>
     </ul>
   </div>
   <ng-content></ng-content>
