--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <h1>Activities</h1>
+  <h1 *ngIf="pageInfo">{{pageInfo.name}}</h1>
 
   <div class=popupContainer  *ngIf="token">
     <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">add activity</button>
