--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -21,7 +21,7 @@
 .galleryDivContainer{
   text-align: center;
   border-radius: 15px;
-  background-color: #f5f5f5;
+  background-color: #DDEBF4;
   padding : 30px;
 }
 
