--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,20 @@
+header {
+  background-color: #DDEBF4;
+}
+
 .logos {
   overflow: hidden;
 }
 
 img {
   max-height: 20vh;
+}
+
+.navbar {
+  background-color: #0096CA;
+  border-radius: 0;
+}
+
+a {
+  color: white !important;
 }
