--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <h1>Home</h1>
+  <h1 *ngIf="pageInfo">{{pageInfo.name}}</h1>
   <!-- Admin form -->
   <div class=popupContainer  *ngIf="token">
     <button type="button" class="btn btn-info btn-lg buttonForm" (click)="showFormPopup()">add article</button>
@@ -10,7 +10,7 @@
       </div>
     </app-popup>
   </div>
-  <div class="col-sm-12 col-md-9">
+  <div class="col-md-12 col-lg-9">
     <!-- Articles -->
     <article *ngFor="let article of articles; let i = index; let e = even" class="row card" [ngClass]="{'articleEven': e, 'articleOdd': !e}" id='{{i}}home'>
       <app-article-form *ngIf="article.editing" [pageId]="curId" [article]="article" (newArticleEvent)="editArticle($event, article)" (deletedArticleEvent)="deleteArticle($event)"></app-article-form>
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <aside class="hidden-sm-down col-md-3">
+  <aside class="hidden-md-down col-lg-3">
     <ul>
       <li *ngFor="let article of articles; let i = index; let e = even" class="list-group-item asideMenu" [ngClass]="{'articleEven': e, 'articleOdd': !e}">
         <a (click)="goTo(i+'home')"> {{article.title}}</a>
