--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
+body {
+  /*background-color: #FDFBF4;*/
+  background-color: #EFEFFO;
+}
+
 /* You can add global styles to this file, and also import other style files */
 h1{
   text-align: center;
