--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -1,28 +1,60 @@
-.galleryDiv{
-  padding: 0.1vw;
+@media (min-width: 1200px) {
+  .galleryDiv{
+    padding: 0.1vw;
+  }
+
+  .thumbnail{
+    overflow: hidden;
+    height: 30vh;
+    padding: 0;
+    border-radius: 0.5rem;
+  }
+
+  .galleryDiv img{
+    width: auto;
+    height: 100%;
+    margin: auto;
+    position: absolute;
+    left: -50%;
+    right: -50%;
+  }
+
+  .galleryDivContainer{
+    text-align: center;
+    border-radius: 15px;
+    background-color: #DDEBF4;
+    padding : 30px;
+  }
 }
 
-.thumbnail{
-  overflow: hidden;
-  height: 25vh;
-  padding: 0;
-  border-radius: 0.5rem;
-}
+/* SM styling */
+@media (max-width: 1200px) {
+  .galleryDiv{
+    padding: 0;
+  }
 
-.galleryDiv img{
-  width: auto;
-  height: 100%;
-  margin: auto;
-  position: absolute;
-  left: -50%;
-  right: -50%;
-}
+  .thumbnail{
+    overflow: hidden;
+    height: 40vh;
+    padding: 0;
+    border-radius: 0.5rem;
+  }
 
-.galleryDivContainer{
-  text-align: center;
-  border-radius: 15px;
-  background-color: #DDEBF4;
-  padding : 30px;
+  .galleryDiv img{
+    width: auto;
+    height: 100%;
+    margin: auto;
+    position: absolute;
+    left: -50%;
+    right: -50%;
+  }
+
+  .galleryDivContainer{
+    text-align: center;
+    border-radius: 0;
+    background-color: #DDEBF4;
+    padding : 10px;
+  }
 }
 
 .popupContainer{
