--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,9 @@
+.pageInfos {
+  background-color: #DDEBF4;
+}
+
 img{
-  width: 33%;
+  width: 100%;
   margin:10px;
 }
 
@@ -13,7 +17,7 @@ h2{
 article{
   padding: 20px;
   border: 0;
-  border-radius: 15px;
+  border-radius: 0;
 }
 
 article p{
@@ -38,10 +42,10 @@ a{
 }
 
 .articleOdd{
-  background-color: #D7E5EC;
+  background-color: #DDEBF4;
 }
 .articleEven{
-  background-color: #DDEBF4;
+  /*background-color: #D7E5EC;*/
 }
 
 .navButtonLike{
@@ -68,4 +72,11 @@ a{
   font-style: italic;
   font-weight: lighter;
   color: #003c6f;
+}
+
+@media (min-width: 1200px) {
+    .yt-embended {
+        width:848px;
+        height: 480px;
+    }
 }
