--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,11 @@
 <div class="row">
-  <h1 *ngIf="pageInfo">{{pageInfo.name}}</h1>
+  <div class="col-md-12 col-lg-12 pageInfos" *ngIf="pageInfo">
+    <div class="container">
+      <h1>{{pageInfo.name}}</h1>
+      <p>{{pageInfo.description}}</p>
+    </div>
+  </div>
+
   <!-- Admin form -->
   <div class=popupContainer  *ngIf="token">
     <button type="button" class="btn btn-info btn-lg buttonForm" (click)="showFormPopup()">add article</button>
@@ -10,20 +16,20 @@
       </div>
     </app-popup>
   </div>
-  <div class="col-md-12 col-lg-9">
+  <div class="col-md-12 col-lg-12">
     <!-- Articles -->
     <article *ngFor="let article of articles; let i = index; let e = even" class="row card" [ngClass]="{'articleEven': e, 'articleOdd': !e}" id='{{i}}home'>
       <app-article-form *ngIf="article.editing" [pageId]="curId" [article]="article" (newArticleEvent)="editArticle($event, article)" (deletedArticleEvent)="deleteArticle($event)"></app-article-form>
-      <div *ngIf="!article.editing" (click)="article.editing = token ? !article.editing : false">
+      <div *ngIf="!article.editing" (click)="article.editing = token ? !article.editing : false" class="container">
         <h2>{{article.title}}</h2>
         <div>
           <div *ngIf="article.mimetype && article.mimetype !== 'youtube'">
-            <div>
+            <div class="col-md-4 col-sm-12">
               <img [ngClass]="{'rightImg': e, 'leftImg': !e}" src="/api/public/media/{{article.media}}/show">
             </div>
           </div>
           <div *ngIf="article.mimetype === 'youtube'">
-            <div [ngClass]="{'rightImg': e, 'leftImg': !e}">
+            <div class="yt-embended" [ngClass]="{'rightImg': e, 'leftImg': !e, 'mr-1': !e, 'ml-1': e}">
                 <app-youtube-embended [url]="article.media"></app-youtube-embended>
             </div>
           </div>
@@ -47,7 +53,7 @@
     </div>
   </div>
 
-  <aside class="hidden-md-down col-lg-3">
+  <!-- <aside class="hidden-md-down col-lg-3">
     <ul>
       <li *ngFor="let article of articles; let i = index; let e = even" class="list-group-item asideMenu" [ngClass]="{'articleEven': e, 'articleOdd': !e}">
         <a (click)="goTo(i+'home')"> {{article.title}}</a>
@@ -60,5 +66,5 @@
         <button class="btn btn-outline-primary btn-sm" (click)="offsetChange(1)">→</button>
       </div>
     </div>
-  </aside>
+  </aside> -->
 </div>
