--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,20 @@ a:hover{
   font-weight: bold;
 }
 
+@media (min-width: 1200px) {
+  .container {
+    width:1400px;
+  }
+}
+
+/* SM styling */
+@media (max-width: 1200px) {
+  .container {
+    width: 100%;
+    padding: 0;
+  }
+}
+
 
 /***Media Popup addons**/
 
