--- a/src/app/article-form/article-form.component.html
+++ b/src/app/article-form/article-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="article.newArticle ?  submitArticle() : editArticle()" class="row card" id='article'>
+<form (ngSubmit)="article.newArticle ?  submitArticle() : editArticle()" class="row" id='article'>
   <div class="form-group">
     <input type="text" class="form-control" id="title" [(ngModel)]="article.title" name="title">
   </div>
