--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -1,47 +1,49 @@
-<h1>Admin</h1>
+<div class="container">
+  <h1>Admin</h1>
 
-<div class="card row">
-  <h2>Header</h2>
-  <hr/>
-  <div class="col-md-3">
-    <img *ngIf="logo" [attr.src]='logo' class="img-thumbnail rounded mx-auto d-block" alt=""/>
-    <label class="custom-file" [ngClass]="{'col-xs-10': logo, 'col-xs-12': !logo}">
-      <input type="file" id="file" class="custom-file-input" (change)="logoChange(logoInput)" #logoInput>
-      <span class="custom-file-control">Click to choose logo</span>
-    </label>
-    <a type="button" *ngIf="logo" class="btn btn-success col-xs-2" (click)="editConfig('logo', logo)">V</a>
+  <div class="card row">
+    <h2>Header</h2>
+    <hr/>
+    <div class="col-md-3">
+      <img *ngIf="logo" [attr.src]='logo' class="img-thumbnail rounded mx-auto d-block" alt=""/>
+      <label class="custom-file" [ngClass]="{'col-xs-10': logo, 'col-xs-12': !logo}">
+        <input type="file" id="file" class="custom-file-input" (change)="logoChange(logoInput)" #logoInput>
+        <span class="custom-file-control">Click to choose logo</span>
+      </label>
+      <a type="button" *ngIf="logo" class="btn btn-success col-xs-2" (click)="editConfig('logo', logo)">V</a>
+    </div>
+    <div class="col-md-7">
+      <img *ngIf="banner" [attr.src]='banner' class="img-thumbnail rounded mx-auto d-block" alt=""/>
+      <label class="custom-file"  [ngClass]="{'col-xs-10': banner, 'col-xs-12': !banner}">
+        <input type="file" id="file" class="custom-file-input" (change)="bannerChange(bannerInput)" #bannerInput>
+        <span class="custom-file-control">Click here to choose banner</span>
+      </label>
+      <a type="button" *ngIf="banner" class="btn btn-success col-xs-2" (click)="editConfig('banner', banner)">Submit</a>
+    </div>
+    <a type="button" class="btn btn-danger col-xs-2" (click)="editConfig('logo', null); editConfig('banner', null)">Supprimer les logos</a>
   </div>
-  <div class="col-md-7">
-    <img *ngIf="banner" [attr.src]='banner' class="img-thumbnail rounded mx-auto d-block" alt=""/>
-    <label class="custom-file"  [ngClass]="{'col-xs-10': banner, 'col-xs-12': !banner}">
-      <input type="file" id="file" class="custom-file-input" (change)="bannerChange(bannerInput)" #bannerInput>
-      <span class="custom-file-control">Click here to choose banner</span>
-    </label>
-    <a type="button" *ngIf="banner" class="btn btn-success col-xs-2" (click)="editConfig('banner', banner)">Submit</a>
-  </div>
-  <a type="button" class="btn btn-danger col-xs-2" (click)="editConfig('logo', null); editConfig('banner', null)">Supprimer les logos</a>
+
+  <app-form-list title="Pages" [newItem]="newPage" [items]="pages" (selectedItem)="selectPage($event)">
+    <form (ngSubmit)="curPage._id ? editPage() : addPage()" class="col-xs-10">
+      <div class="form-group col-xs-10 pl-0">
+        <input type="text" class="form-control" id="title" [(ngModel)]="curPage.name" name="name">
+      </div>
+      <div class="form-group col-xs-2 pr-0">
+        <select class="custom-select" id="mimetype" [(ngModel)]="curPage.type" name="type">
+          <option selected value="0">Blog type</option>
+          <option value="1">Activity type</option>
+          <option value="2">Gallery type</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <textarea class="form-control" id="text" rows="3" [(ngModel)]="curPage.description" name="description"></textarea>
+      </div>
+
+      <div class="form-group">
+        <a type="button" *ngIf="curPage._id" class="btn btn-danger col-xs-2 mr-1 float-xs-left" (click)="deletePage()">Delete</a>
+        <button type="submit" class="btn btn-primary col-xs-2 float-xs-right">Submit</button>
+      </div>
+    </form>
+  </app-form-list>
 </div>
-
-<app-form-list title="Pages" [newItem]="newPage" [items]="pages" (selectedItem)="selectPage($event)">
-  <form (ngSubmit)="curPage._id ? editPage() : addPage()" class="col-xs-10">
-    <div class="form-group col-xs-10 pl-0">
-      <input type="text" class="form-control" id="title" [(ngModel)]="curPage.name" name="name">
-    </div>
-    <div class="form-group col-xs-2 pr-0">
-      <select class="custom-select" id="mimetype" [(ngModel)]="curPage.type" name="type">
-        <option selected value="0">Blog type</option>
-        <option value="1">Activity type</option>
-        <option value="2">Gallery type</option>
-      </select>
-    </div>
-
-    <div class="form-group">
-      <textarea class="form-control" id="text" rows="3" [(ngModel)]="curPage.description" name="description"></textarea>
-    </div>
-
-    <div class="form-group">
-      <a type="button" *ngIf="curPage._id" class="btn btn-danger col-xs-2 mr-1 float-xs-left" (click)="deletePage()">Delete</a>
-      <button type="submit" class="btn btn-primary col-xs-2 float-xs-right">Submit</button>
-    </div>
-  </form>
-</app-form-list>
