--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -51,4 +51,86 @@
       </div>
     </form>
   </app-form-list>
+
+  <div class="row card">
+    <h2>Footer</h2>
+    <hr/>
+    <div class="col-md-4">
+      <div class="card">
+        <h3 class="card-header">Des infos</h3>
+        <ul>
+          <li *ngFor="let info of infos; let i = index">
+            <div class="input-group">
+              <span class="input-group-btn">
+                <button class="btn btn-danger" type="button">X</button>
+              </span>
+              <input type="text" class="form-control" [(ngModel)]="infos[i]" name="info">
+              <span class="input-group-btn">
+                <button class="btn btn-success" type="button">V</button>
+              </span>
+            </div>
+          </li>
+        </ul>
+
+        <div class="input-group">
+          <input type="text" class="form-control" [(ngModel)]="newInfo" name="newInfo">
+          <span class="input-group-btn">
+            <button class="btn btn-success" type="button">V</button>
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card">
+        <h3 class="card-header">Partenaires</h3>
+        <ul>
+          <li *ngFor="let partner of partners; let i = index">
+            <div class="input-group">
+              <span class="input-group-btn">
+                <button class="btn btn-danger" type="button">X</button>
+              </span>
+              <input type="text" class="form-control" [(ngModel)]="partners[i]" name="partner">
+              <span class="input-group-btn">
+                <button class="btn btn-success" type="button">V</button>
+              </span>
+            </div>
+          </li>
+        </ul>
+
+        <div class="input-group">
+          <input type="text" class="form-control" [(ngModel)]="newPartner" name="newPartner">
+          <span class="input-group-btn">
+            <button class="btn btn-success" type="button">V</button>
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card">
+        <h3 class="card-header">Contact</h3>
+        <ul>
+          <li *ngFor="let contact of contacts; let i = index">
+            <div class="input-group">
+              <span class="input-group-btn">
+                <button class="btn btn-danger" type="button">X</button>
+              </span>
+              <input type="text" class="form-control" [(ngModel)]="contacts[i]" name="contact">
+              <span class="input-group-btn">
+                <button class="btn btn-success" type="button">V</button>
+              </span>
+            </div>
+          </li>
+        </ul>
+
+        <div class="input-group">
+          <input type="text" class="form-control" [(ngModel)]="newContact" name="newContact">
+          <span class="input-group-btn">
+            <button class="btn btn-success" type="button">V</button>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
